--- a/task11/Segmentation.ipynb
+++ b/task11/Segmentation.ipynb
@@ -2,26 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import ipywidgets as widgets\n",
     "\n",
     "saveSteps = False\n",
     "lowThreshold = 0\n",
     "numberOfIterations = 5\n",
-    "image = cv2.imread('img.png')"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "image = cv2.imread('/Users/konstantin/ImageProcessing/task11/segmentation.jpg')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def update():\n",
@@ -45,7 +44,9 @@
     "\tmarkers = cv2.watershed(img_copy, markers)\n",
     "\n",
     "\timg_copy[markers == -1] = (0, 0, 255)\n",
-    "\tcv2.imshow(\"img\", img_copy)\n",
+    "\t# cv2.namedWindow(\"img\")\n",
+    "\tplt.imshow(img_copy, cmap='gray')\n",
+    "\tplt.show()\n",
     "\n",
     "\tif saveSteps:\n",
     "\t\tplt.rcParams['figure.dpi'] = 250\n",
@@ -84,56 +85,75 @@
     "\t\tplt.savefig('steps.png')\n",
     "\n",
     "\n",
-    "def changeLowThresholdValue(val):\n",
-    "\tglobal lowThreshold\n",
-    "\tlowThreshold = val\n",
-    "\tupdate()\n",
-    "\n",
-    "\n",
-    "def changeNumberOfIterations(val):\n",
-    "\tglobal numberOfIterations\n",
-    "\tnumberOfIterations = val\n",
-    "\tupdate()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "# def changeLowThresholdValue(val):\n",
+    "# \tglobal lowThreshold\n",
+    "# \tlowThreshold = val\n",
+    "# \tupdate()\n",
+    "#\n",
+    "#\n",
+    "# def changeNumberOfIterations(val):\n",
+    "# \tglobal numberOfIterations\n",
+    "# \tnumberOfIterations = val\n",
+    "# \tupdate()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "cv2.namedWindow('Control')\n",
-    "cv2.createTrackbar('thresh low', 'Control', 20, 255, changeLowThresholdValue)\n",
-    "cv2.createTrackbar('iterations', 'Control', 5, 100, changeNumberOfIterations)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()"
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4718631d516940729e3f626600255570",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=127, description='thresh', max=255), IntSlider(value=50, description='it…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
    ],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": [
+    "@widgets.interact(thresh=(0, 255), iters=(0, 100))\n",
+    "def widgets(thresh, iters):\n",
+    "\tglobal lowThreshold\n",
+    "\tglobal numberOfIterations\n",
+    "\tlowThreshold = thresh\n",
+    "\tnumberOfIterations = iters\n",
+    "\tupdate()\n",
+    "\n",
+    "# cv2.namedWindow('Control')\n",
+    "# cv2.createTrackbar('thresh low', 'Control', 20, 255, changeLowThresholdValue)\n",
+    "# cv2.createTrackbar('iterations', 'Control', 5, 100, changeNumberOfIterations)\n",
+    "# cv2.waitKey(0)\n",
+    "# cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
